# camtk

./: CMakeLists.txt  README.md  shell.nix
calibration/: CMakeLists.txt  calibration_result.cc  calibration_result.h  calibrator.cc  calibrator.h  checker_board.cc  checker_board.h
tools/: CMakeLists.txt  calibrate_from_camera.cc  calibrate_from_video.cc
